@@ -1,3 +1,7 @@
+2005-11-01  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: added support for crontab in new config format
+
 2005-10-30  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* bugfix: cookie %spacefree not always working
